# nix

./: .gitignore  README.md  default.nix  flake.nix  rebuild.sh  utilScripts.nix
config/doom.d/: config.el  custom.el  init.el  packages.el
config/dunst/: dunstrc
config/nvim/: coc-settings.json  init.vim
config/obsidian-theme/: default.scss
config/x/: Xresources
config/xmonad/: Main.hs  flake.nix  xmonad-jack.cabal
hosts/CASTOR/: configuration.nix
hosts/Jack-Michaud/: configuration.nix
hosts/aarch64-darwin/DAMOCLES/: default.nix
hosts/aarch64-darwin/Jack-Michaud/: default.nix
hosts/ajax/: default.nix
lib/: default.nix  modules.nix  nixos.nix
modules/: options.nix  wireless.nix
modules/darwin/: homebrew.nix  options.nix
modules/desktop/: default.nix  sound.nix
modules/linux/: options.nix  utils.nix  wireless.nix
modules/services/: ssh.nix  syncthing.nix
modules/shared/: options.nix
modules/shells/: fish.nix
modules/tools/: openvpn.nix  wireguard.nix
overlays/: default.nix
roles/cachix/: default.nix
roles/dev/: default.nix
roles/homebrew/: default.nix
roles/personal-messaging/: default.nix
roles/sound/: default.nix
roles/ssh/: default.nix
roles/standard/: alacritty.nix  common.nix  darwin.nix  default.nix  fish.nix  git.nix  iosevka.nix  linux.nix
roles/sync/: default.nix
roles/wireless/: default.nix
roles/x11/: default.nix  dunst.nix  dwm-status.nix  light.nix  picom.nix  rofi.nix  sxhkd.nix  xresources.nix
utilScripts/: default.nix  spotify-dbus-spotify.nix  use-vpn.nix
utils/: generators.nix
(+127 files in other folders)
