cabal-version:      3.0
name:               xmonad-jack
version:            0.1.0.0
author:             Jack Michaud
maintainer:         jack@lomz.me
extra-source-files: CHANGELOG.md

library
    main-is: Main.hs
    build-depends:    base ^>=4.15.1.0
    default-language: Haskell2010
    build-depends:
      , xmonad
      , xmonad-contrib
      , containers


